@@ -36,7 +36,7 @@ request. Additionally the request headers are also printed.
     HTTP_USER_AGENT lovey.jsonpc.proxy (httplib)
 
     >>> res
-    [[u'one'], {u'y': {u'first': 123}, u'x': 1}]
+    [['one'], {'y': {'first': 123}, 'x': 1}]
 
 Session handling
 ================
@@ -77,3 +77,22 @@ the next request.
 
     >>> res
     [[1], {}]
+
+Appengine Transport
+===================
+
+There is also an appengine transport. With this transport it is
+possible to make remote calls from an appengine app.
+
+Note that we do not have a dependency on the google.appengine.*
+packages in this package, so we cannot test it here because it raises
+an ImportError.
+
+The proxy is created like this.
+
+    >>> c = proxy.ServerProxy('http://localhost:12345',
+    ...     transport_impl=proxy.GAEJSONRPCTransport)
+    Traceback (most recent call last):
+    ...
+    ImportError: No module named google.appengine.api
+
